--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
-    "react-confetti-explosion": "latest",
+    "react-confetti-explosion": "2.1.2",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
@@ -60,7 +60,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "ws": "^8.18.3",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^22",
