--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@supabase/supabase-js": "^2.39.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,6 +50,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
+    "react-confetti": "^6.4.0",
     "react-confetti-explosion": "2.1.2",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -61,8 +63,7 @@
     "vaul": "^0.9.6",
     "ws": "^8.18.3",
     "zod": "^3.24.1",
-    "zustand": "^5.0.9",
-    "@supabase/supabase-js": "^2.39.0"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^22",
